--- a/src/PortlandTelangana/project.json
+++ b/src/PortlandTelangana/project.json
@@ -3,17 +3,22 @@
   "version": "1.0.0-*",
 
   "dependencies": {
+    "Microsoft.AspNet.Mvc": "6.0.0-beta4",
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
-    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4"
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4"
   },
 
   "commands": {
-      "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000"
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000"
   },
+
+
 
   "frameworks": {
     "dnx451": { },
     "dnxcore50": { }
+    //"aspnetcore50": { }
   },
 
   "publishExclude": [
