--- a/src/PortlandTelangana/bower.json
+++ b/src/PortlandTelangana/bower.json
@@ -1,14 +1,29 @@
 {
   "name": "PortlandTelangana",
-  "private": true,
   "dependencies": {
-    "bootstrap": "3.3.2"
+    "bootstrap": "3.3.2",
+    "angular": "1.4.3",
+    "angular-route": "1.4.3",
+    "angular-resource": "1.4.3"
   },
   "exportsOverride": {
-        "bootstrap": {
-            "js":  "dist/js/*.*",
-            "css":  "dist/css/*.*",
-            "fonts":  "dist/fonts/*.*"
-        }
+    "bootstrap": {
+      "js": "dist/js/*.*",
+      "css": "dist/css/*.*",
+      "fonts": "dist/fonts/*.*"
     }
+  },
+  "version": "0.0.0",
+  "homepage": "https://github.com/shashank24/PortlandTelangana",
+  "authors": [
+    "Shashank Shetti <shashank.shetti@gmail.com>"
+  ],
+  "description": "Client side libraries",
+  "moduleType": [
+    "globals"
+  ],
+  "keywords": [
+    "Portland Telangana library"
+  ],
+  "license": "MIT"
 }
