--- a/src/PortlandTelangana/project.json
+++ b/src/PortlandTelangana/project.json
@@ -6,7 +6,8 @@
     "Microsoft.AspNet.Mvc": "6.0.0-beta4",
     "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
     "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4"
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+      "angularjs": "1.4.3"
   },
 
   "commands": {
