--- a/src/PortlandTelangana/package.json
+++ b/src/PortlandTelangana/package.json
@@ -3,12 +3,14 @@
   "name": "PortlandTelangana",
   "private": true,
   "devDependencies": {
-    "grunt": "0.4.5",
+    "bower": "^1.4.1",
+    "grunt": "^0.4.5",
+    "grunt-bower-install-task": "0.0.4",
+    "grunt-bower-task": "0.4.0",
     "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-concat": "0.5.1",
+    "grunt-contrib-jshint": "0.11.0",
     "grunt-contrib-uglify": "0.8.0",
-    "grunt-contrib-watch": "0.6",
-    "grunt-bower-task": "0.4.0"
+    "grunt-contrib-watch": "0.6"
   }
 }
